vlib/v/checker/tests/goto_label.vv
fn f() {
	goto l
	l:
}

fn g() {
	l2:
	goto l
	goto l2
	goto l3
}

